--- a/TP Integrador front end Boostrap/index.html
+++ b/TP Integrador front end Boostrap/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Integrador Front End Bootstrap</title>
-    <link rel="stylesheet" href="integrador.css">
+    <link rel="stylesheet" href="css/integrador.css">
    
    
 
